Add skin fetching for bedrock players using skin prefix or -b flag in /npc skin. Hide the floodgate prefix for /npc mirror. Add NPCShopPurchaseEvent