@@ -4,7 +4,9 @@ import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -13,6 +15,7 @@ import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 
 import com.google.common.io.CharStreams;
+import com.mojang.authlib.GameProfile;
 
 import net.citizensnpcs.api.util.Messaging;
 
@@ -23,7 +26,7 @@ public class MojangSkinGenerator {
             DataOutputStream out = null;
             InputStreamReader reader = null;
             try {
-                URL target = new URL("https://api.mineskin.org/generate/upload" + (slim ? "?model=slim" : ""));
+                URL target = new URI("https://api.mineskin.org/generate/upload" + (slim ? "?model=slim" : "")).toURL();
                 HttpURLConnection con = (HttpURLConnection) target.openConnection();
                 con.setRequestMethod("POST");
                 con.setDoOutput(true);
@@ -83,7 +86,7 @@ public class MojangSkinGenerator {
             DataOutputStream out = null;
             InputStreamReader reader = null;
             try {
-                URL target = new URL("https://api.mineskin.org/generate/url");
+                URL target = new URI("https://api.mineskin.org/generate/url").toURL();
                 HttpURLConnection con = (HttpURLConnection) target.openConnection();
                 con.setRequestMethod("POST");
                 con.setDoOutput(true);
@@ -121,6 +124,81 @@ public class MojangSkinGenerator {
                     } catch (IOException e) {
                     }
                 }
+                if (reader != null) {
+                    try {
+                        reader.close();
+                    } catch (IOException e) {
+                    }
+                }
+            }
+        }).get();
+    }
+
+    public static GameProfile getFilledGameProfileByXUID(String name, long xuid)
+            throws InterruptedException, ExecutionException {
+        return EXECUTOR.submit(() -> {
+            InputStreamReader reader = null;
+            try {
+                URL target = new URI("https://api.geysermc.org/v2/skin/" + xuid).toURL();
+                HttpURLConnection con = (HttpURLConnection) target.openConnection();
+                con.setRequestMethod("GET");
+                con.setRequestProperty("User-Agent", "Citizens/2.0");
+                con.setRequestProperty("Accept", "application/json");
+                con.setConnectTimeout(2000);
+                con.setReadTimeout(20000);
+                reader = new InputStreamReader(con.getInputStream());
+                String str = CharStreams.toString(reader);
+                if (Messaging.isDebugging()) {
+                    Messaging.debug(str);
+                }
+                if (con.getResponseCode() != 200)
+                    return null;
+
+                JSONObject output = (JSONObject) new JSONParser().parse(str);
+                con.disconnect();
+                String hex = Long.toHexString(xuid);
+                GameProfile profile = new GameProfile(
+                        UUID.fromString("00000000-0000-0000-" + hex.substring(0, 4) + "-" + hex.substring(4)), name);
+                new SkinProperty((String) output.get("texture_id"), (String) output.get("value"),
+                        (String) output.get("signature")).apply(profile);
+                return profile;
+            } finally {
+                if (reader != null) {
+                    try {
+                        reader.close();
+                    } catch (IOException e) {
+                    }
+                }
+            }
+        }).get();
+    }
+
+    public static Long getXUIDFromName(String name) throws InterruptedException, ExecutionException {
+        return EXECUTOR.submit(() -> {
+            InputStreamReader reader = null;
+            try {
+                URL target = new URI("https://api.geysermc.org/v2/xbox/xuid/" + name).toURL();
+                HttpURLConnection con = (HttpURLConnection) target.openConnection();
+                con.setRequestMethod("GET");
+                con.setRequestProperty("User-Agent", "Citizens/2.0");
+                con.setRequestProperty("Accept", "application/json");
+                con.setConnectTimeout(2000);
+                con.setReadTimeout(10000);
+                reader = new InputStreamReader(con.getInputStream());
+                String str = CharStreams.toString(reader);
+                if (Messaging.isDebugging()) {
+                    Messaging.debug(str);
+                }
+                if (con.getResponseCode() != 200)
+                    return null;
+
+                JSONObject output = (JSONObject) new JSONParser().parse(str);
+                con.disconnect();
+                if (!output.containsKey("xuid"))
+                    return null;
+
+                return ((Number) output.get("xuid")).longValue();
+            } finally {
                 if (reader != null) {
                     try {
                         reader.close();
